Custom dockerfile med corretto